# Video-Special-Effects

./: CMakeLists.txt  ReadMe.Md  filters.cpp  filters.hpp  imgDisplay.cpp  timeBlur.cpp  vidDisplay.cpp
